--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
-        <link rel="stylesheet" href="css/styles.css">
-        <title>Ohmyfood - La palette du goût</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico"/>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <title>Ohmyfood - À la française</title>
     </head>
     <header>
         <h1 class="header-title">ohmyfood</h1>
@@ -32,167 +32,173 @@
         <form method="post" action="#">
 
         <section>
-            <h2 class="titre-section titre-section--entree">ENTRÉES</h2>
-            <article class="cards-menu cards-menu--entree-1">
-                <h3>Tartare de poulpe acidulé</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Aux zestes d'orange</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>25€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-2">
-                <h3>Velouté de légumes d'antan</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Carotte, panais, topinambour</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-3">
-                <h3>Soupe à l'oignon</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Revisitée</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>20€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>            
+            <h3 class="titre-section titre-section--entree">ENTRÉES</h2>
+                <div class="flex-article">
+                <article class="cards-menu cards-menu--entree-1">
+                    <h4>Tartare de poulpe acidulé</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Aux zestes d'orange</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>25€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-2">
+                    <h4>Velouté de légumes d'antan</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Carotte, panais, topinambour</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-3">
+                    <h4>Soupe à l'oignon</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Revisitée</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>20€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>            
         </section>                   
 
         <section>
             <h2 class="titre-section titre-section--plat">PLATS</h2>
-            <article class="cards-menu cards-menu--plat-1">
-                <h3>Coquilles Saint-Jacques</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Accompagnées d'une purée de panais</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>40€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-2">
-                <h3>Magret de canard</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et parmentier de pommes de terre</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-3">
-                <h3>Pigeonneau d’Ille-et-Vilaine</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Sur son lit de gnocchis aux légumes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>44€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--plat-1">
+                    <h4>Coquilles Saint-Jacques</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Accompagnées d'une purée de panais</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>40€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-2">
+                    <h4>Magret de canard</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et parmentier de pommes de terre</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-3">
+                    <h4>Pigeonneau d’Ille-et-Vilaine</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Sur son lit de gnocchis aux légumes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>44€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section>
-            <h2 class="titre-section titre-section--dessert">DESSERTS</h2>
-            <article class="cards-menu cards-menu--dessert-1">
-                <h3>Pétales de violettes glacés</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et purée de noisettes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>18€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-2">
-                <h3>Fondant au chocolat</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Revisitée</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>22€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-3">
-                <h3>Millefeuille croustillant</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4 class="titre-gras">Myrtilles et pâte d’amande</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>23€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--dessert">DESSERTS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--dessert-1">
+                    <h4>Pétales de violettes glacés</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et purée de noisettes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>18€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-2">
+                    <h4>Fondant au chocolat</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Revisitée</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>22€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-3">
+                    <h4>Millefeuille croustillant</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5 class="titre-gras">Myrtilles et pâte d’amande</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>23€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
-            <input type="submit" class="commander" value="Commander">
+            <input type="submit" class="commander" value="Commander"/>
 
         </form>
     </main>
     <footer class="footer">
-        <h6 class="footer__title">ohmyfood</h6>
+        <p class="footer__title">ohmyfood</p>
         <nav>
             <ul class="menu-footer">
                 <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
