--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico"/>
         <title>Ohmyfood - Accueil</title>
     </head>
     <body>
@@ -23,9 +23,9 @@
 
             <div class="formulaire">
                 <form method="post" action="#" class="recherche">
-                        <label for="adresse" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
-                        <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
-                    </form>
+                    <label for="adresse" class="location"><i class="fa-sharp fa-solid fa-location-dot" ></i></label>
+                    <input type="search" id="adresse" name="adresse" placeholder="Paris, Belleville" class="recherche__adresse">
+                </form>
             </div>
             <section class="explorer-restos">
                     <h2 class="explorer-restos__title">Réservez le menu qui vous convient</h2>
@@ -37,17 +37,17 @@
                 <div class="fonctionnement__site">
                     <ul>
                         <li class="explication">
-                            <p class="explication__number explication__number--1">1</p>
+                            <p class="explication__number">1</p>
                             <i class="fa-solid fa-mobile-screen-button explication__icon"></i>
                             <strong class="explication__text">Choisissez un restaurant</strong>
                         </li>
                         <li class="explication">
-                            <p class="explication__number explication__number--2">2</p>
+                            <p class="explication__number">2</p>
                             <i class="fa-solid fa-list explication__icon"></i>
                             <strong class="explication__text">Composez votre menu</strong>
                         </li>
                         <li class="explication explication--3">
-                            <p class="explication__number explication__number--3">3</p>
+                            <p class="explication__number">3</p>
                             <i class="fa-solid fa-store explication__icon explication__icon--3"></i>
                             <strong class="explication__text">Dégustez au restaurant</strong>
                         </li>
@@ -60,7 +60,7 @@
                     <article class="restaurant__article">
                         <a href="la_palette_du_gout.html">
                             <figure class="restaurant__cards">
-                                <p class="nouveau">Nouveau</p>
+                                <p class="nouveau nouveau--1">Nouveau</p>
                                 <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>La palette du goût</h4>
@@ -68,7 +68,7 @@
                                 </figcaption>
                             </figure>
                         </a>
-                        <button class="heart">
+                        <button class="heart heart--1">
                             <i class="fa-regular fa-heart border-heart"></i>
                             <i class="fa-solid fa-heart heart-colorer"></i>
                         </button>
@@ -76,7 +76,7 @@
                     <article class="restaurant__article">
                         <a href="la_note_enchantee.html">
                             <figure class="restaurant__cards">
-                                <p class="nouveau">Nouveau</p>
+                                <p class="nouveau nouveau--2">Nouveau</p>
                                 <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__photo" alt="resto"/>
                                 <figcaption class="restaurant__nom">
                                     <h4>La note enchantée</h4>
@@ -84,7 +84,7 @@
                                 </figcaption>
                             </figure>
                         </a>
-                        <button class="heart">
+                        <button class="heart heart--2">
                             <i class="fa-regular fa-heart border-heart"></i>
                             <i class="fa-solid fa-heart heart-colorer"></i>
                         </button>
@@ -99,7 +99,7 @@
                                 </figcaption>
                             </figure>
                         </a>
-                        <button class="heart">
+                        <button class="heart heart--3">
                             <i class="fa-regular fa-heart border-heart"></i>
                             <i class="fa-solid fa-heart heart-colorer"></i>
                         </button>
@@ -114,7 +114,7 @@
                                 </figcaption>
                             </figure>
                         </a>
-                        <button class="heart">
+                        <button class="heart heart--4">
                             <i class="fa-regular fa-heart border-heart"></i>
                             <i class="fa-solid fa-heart heart-colorer"></i>
                         </button>
@@ -134,6 +134,5 @@
                 </ul>
             </nav>
         </footer>
-        
     </body>
 </html>
