--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
-        <link rel="stylesheet" href="css/styles.css">
-        <title>Ohmyfood - La palette du goût</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico"/>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <title>Ohmyfood - La note enchantée</title>
     </head>
     <header>
         <h1 class="header-title">ohmyfood</h1>
@@ -32,183 +32,189 @@
         <form method="post" action="#">
 
         <section>
-            <h2 class="titre-section titre-section--entree">ENTRÉES</h2>
-            <article class="cards-menu cards-menu--entree-1">
-                <h3>Ravioles de foie gras</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Accompagnées de leur crème à la truffe</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>25€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-2">
-                <h3>Caviar osciètre</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Sur blini à la farine de blé noir</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-3">
-                <h3>Homard et espuma de potiron</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Marinés aux zestes d'orange</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>20€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-3">
-                <h3>Foie gras de canard cuit entier</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Confiture de figue et pain toasté</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>            
+            <h3 class="titre-section titre-section--entree">ENTRÉES</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--entree-1">
+                    <h4>Ravioles de foie gras</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Accompagnées de leur crème à la truffe</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>25€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat"h5>
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-2">
+                    <h4>Caviar osciètre</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Sur blini à la farine de blé noir</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-3">
+                    <h4>Homard et espuma de potiron</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Marinés aux zestes d'orange</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>20€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-4">
+                    <h4>Foie gras de canard cuit entier</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Confiture de figue et pain toasté</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>            
         </section>                   
 
         <section>
-            <h2 class="titre-section titre-section--plat">PLATS</h2>
-            <article class="cards-menu cards-menu--plat-1">
-                <h3>Noix de coquilles Saint-Jacques</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Sur lit de purée de céleri-rave</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>40€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-2">
-                <h3>Langoustine poêlée</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et purée de patate douce</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-3">
-                <h3>Mijoté de queue de boeuf</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et riz sauvage aux zestes de citron</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>44€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--plat">PLATS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--plat-1">
+                    <h4>Noix de coquilles Saint-Jacques</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Sur lit de purée de céleri-rave</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>40€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-2">
+                    <h4>Langoustine poêlée</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et purée de patate douce</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-3">
+                    <h4>Mijoté de queue de boeuf</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et riz sauvage aux zestes de citron</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>44€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section>
-            <h2 class="titre-section titre-section--dessert">DESSERTS</h2>
-            <article class="cards-menu cards-menu--dessert-1">
-                <h3>Macaron noisette et chocolat</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Glace au caramel brun et sel de Guérande</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>18€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-2">
-                <h3>Baba au rhum revisité</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Avec son coulis de citron</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>22€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-3">
-                <h3>Tarte au citron meringuée</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Destructurée</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>23€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--dessert">DESSERTS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--dessert-1">
+                    <h4>Macaron noisette et chocolat</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Glace au caramel brun et sel de Guérande</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>18€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-2">
+                    <h4>Baba au rhum revisité</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Avec son coulis de citron</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>22€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-3">
+                    <h4>Tarte au citron meringuée</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Destructurée</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>23€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
-            <input type="submit" class="commander" value="Commander">
+            <input type="submit" class="commander" value="Commander"/>
 
         </form>
     </main>
     <footer class="footer">
-        <h6 class="footer__title">ohmyfood</h6>
+        <p class="footer__title">ohmyfood</p>
         <nav>
             <ul class="menu-footer">
                 <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
