--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
-        <link rel="stylesheet" href="css/styles.css">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico"/>
+        <link rel="stylesheet" href="css/styles.css"/>
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <header>
@@ -32,167 +32,173 @@
         <form method="post" action="#">
 
         <section>
-            <h2 class="titre-section titre-section--entree">ENTRÉES</h2>
-            <article class="cards-menu cards-menu--entree-1">
-                <h3>Fricassée d'escargots</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Au piment d'Espelette</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>25€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-2">
-                <h3>Foie gras de canard mi-cuit</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et ses copeaux de truffe noire</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-3">
-                <h3>Oeuf au plat</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Assaissoné à la truffe sur lit de caviar</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>20€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>            
+            <h3 class="titre-section titre-section--entree">ENTRÉES</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--entree-1">
+                    <h4>Fricassée d'escargots</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Au piment d'Espelette</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>25€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-2">
+                    <h4>Foie gras de canard mi-cuit</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et ses copeaux de truffe noire</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-3">
+                    <h4>Oeuf au plat</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Assaissoné à la truffe sur lit de caviar</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>20€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>            
         </section>                   
 
         <section>
-            <h2 class="titre-section titre-section--espace titre-section--plat">PLATS</h2>
-            <article class="cards-menu cards-menu--plat-1">
-                <h3>Filet de boeuf aux herbes</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Accompagné de sa ribambelle de légumes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>40€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-2">
-                <h3>Parmentier de queue de boeuf</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>À la truffe noire sur sa purée de panais</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-3">
-                <h3>Filet de turbot</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Aux agrumes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>44€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--espace titre-section--plat">PLATS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--plat-1">
+                    <h4>Filet de boeuf aux herbes</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Accompagné de sa ribambelle de légumes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>40€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-2">
+                    <h4>Parmentier de queue de boeuf</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>À la truffe noire sur sa purée de panais</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-3">
+                    <h4>Filet de turbot</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Aux agrumes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>44€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section>
-            <h2 class="titre-section titre-section--dessert">DESSERTS</h2>
-            <article class="cards-menu cards-menu--dessert-1">
-                <h3>Paris-Brest</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Revisité</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>18€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-2">
-                <h3>Macaron au chocolat d'exception</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et glace à la vanille de Madagascar</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>22€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-3">
-                <h3>Mousse au chocolat</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Au piment d'Espelette et à la truffe noire</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>23€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--dessert">DESSERTS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--dessert-1">
+                    <h4>Paris-Brest</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Revisité</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>18€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-2">
+                    <h4>Macaron au chocolat d'exception</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et glace à la vanille de Madagascar</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>22€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-3">
+                    <h4>Mousse au chocolat</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Au piment d'Espelette et à la truffe noire</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>23€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
-            <input type="submit" class="commander" value="Commander">
+            <input type="submit" class="commander" value="Commander"/h6>
 
         </form>
     </main>
     <footer class="footer">
-        <h6 class="footer__title">ohmyfood</h6>
+        <p class="footer__title">ohmyfood</p>
         <nav>
             <ul class="menu-footer">
                 <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
