--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico">
-        <link rel="stylesheet" href="css/styles.css">
-        <title>Ohmyfood - La palette du goût</title>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+        <link rel="icon" sizes="16x16" href="images/logo/favicon.ico"/>
+        <link rel="stylesheet" href="css/styles.css"/>
+        <title>Ohmyfood - Le délice des sens</title>
     </head>
     <header>
         <h1 class="header-title">ohmyfood</h1>
@@ -32,167 +32,174 @@
         <form method="post" action="#">
 
         <section>
-            <h2 class="titre-section titre-section--entree">ENTRÉES</h2>
-            <article class="cards-menu cards-menu--entree-1">
-                <h3>Tartare de thon</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Assaissoné au yuzu</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>25€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-2">
-                <h3>Bouchée de homard croustillant</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et sa farandole de petits légumes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--entree-3">
-                <h3>Velouté de cèpes</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Aux truffes</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>20€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>            
+            <h3 class="titre-section titre-section--entree">ENTRÉES</h3>
+            
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--entree-1">
+                    <h4>Tartare de thon</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Assaissoné au yuzu</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>25€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-2">
+                    <h4>Bouchée de homard croustillant</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et sa farandole de petits légumes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--entree-3">
+                    <h4>Velouté de cèpes</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Aux truffes</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>20€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>            
         </section>                   
 
         <section>
-            <h2 class="titre-section titre-section--espace titre-section--plat">PLATS</h2>
-            <article class="cards-menu cards-menu--plat-1">
-                <h3>Poulet rôti aux herbes de Provence</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et sa crème de truffe</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>40€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-2">
-                <h3>Langouste rôtie</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et ses légumes de saison</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>35€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--plat-3">
-                <h3>Côte de boeuf Angus</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Et sa purée de panais</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>44€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--espace titre-section--plat">PLATS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--plat-1">
+                    <h4>Poulet rôti aux herbes de Provence</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et sa crème de truffe</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>40€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-2">
+                    <h4>Langouste rôtie</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et ses légumes de saison</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>35€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--plat-3">
+                    <h4>Côte de boeuf Angus</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Et sa purée de panais</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>44€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <section>
-            <h2 class="titre-section titre-section--dessert">DESSERTS</h2>
-            <article class="cards-menu cards-menu--dessert-1">
-                <h3>Farandole de desserts</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Du chef</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>18€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-2">
-                <h3>Crème brulée</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>Revisitée</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>22€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
-            <article class="cards-menu cards-menu--dessert-3">
-                <h3>Tiramisu</h3> 
-                <dl class="cards-menu__align-prix">
-                    <dt class="hidden">détail</dt>
-                    <dd class="cards-menu__detail">
-                        <h4>À la noisette</h4>
-                    </dd>
-                    <dt class="hidden">prix</dt>
-                    <dd>
-                        <h5>23€</h5>
-                    </dd>
-                </dl>
-                <div class="validation-plat">
-                    <i class="fa-solid fa-circle-check validation-plat__icon"></i>
-                </div>
-            </article>
+            <h3 class="titre-section titre-section--dessert">DESSERTS</h3>
+            <div class="flex-article">
+                <article class="cards-menu cards-menu--dessert-1">
+                    <h4>Farandole de desserts</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Du chef</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>18€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-2">
+                    <h4>Crème brulée</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>Revisitée</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>22€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+                <article class="cards-menu cards-menu--dessert-3">
+                    <h4>Tiramisu</h4> 
+                    <dl class="cards-menu__align-prix">
+                        <dt class="hidden">détail</dt>
+                        <dd class="cards-menu__detail">
+                            <h5>À la noisette</h5>
+                        </dd>
+                        <dt class="hidden">prix</dt>
+                        <dd>
+                            <h6>23€</h6>
+                        </dd>
+                    </dl>
+                    <div class="validation-plat">
+                        <i class="fa-solid fa-circle-check validation-plat__icon"></i>
+                    </div>
+                </article>
+            </div>
         </section>
 
-            <input type="submit" class="commander" value="Commander">
+            <input type="submit" class="commander" value="Commander"/>
 
         </form>
     </main>
     <footer class="footer">
-        <h6 class="footer__title">ohmyfood</h6>
+        <p class="footer__title">ohmyfood</p>
         <nav>
             <ul class="menu-footer">
                 <li class="menu-footer__link menu-footer__link--icon"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
